[package]
name = "win-acrylic-sys"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Ragib Hasin <ragib.hasin@gmail.com>"]
description = "A very unsafe library to add mica, acrylic, aero and simple transparency effects for windows on Windows."
license = "MIT OR Apache-2.0"
repository = "https://github.com/RagibHasin/win-acrylic-sys/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
windows-sys = { version = "0.29", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
] }

[workspace]
members = [
    "examples/acrylic",
]
